--- a/Calculator.html
+++ b/Calculator.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<input type="text" id="calculation" disabled>
-		<button type="button" id="btn_calc_clear">C</button><br>
+		<button type="button" id="btn_calc_clear">C</button>
+		<button type="button" id="btn_CE">CE</button><br>
 		<button type="button" id="btnseven">7</button>
 		<button type="button" id="btneigth">8</button>
 		<button type="button" id="btnnine">9</button>
@@ -22,6 +23,8 @@
 		<button type="button" id="btnzero">0</button>
 		<button type="button" id="btndot">.</button>
 		<button type="button" id="btnplus">+</button><br>
+		<button type="button" id="btnabs">|x|</button>
+		<button type="button" id="btn_pi">PI</button>
 		<button type="button" id="btnequal">=</button><br>
 		<button type="button" id="btn_back_calc">Back</button>
 	</body>
