--- a/Game.html
+++ b/Game.html
@@ -2,24 +2,84 @@
 	<head>
 		<title>Games</title>
 		<script src="game.js"></script>
+		<link rel="stylesheet" type="text/css" href="game.css" media="screen"></link>
 	</head>
 	<body>
 		<div id="div_main">
 			<h3>Here are the games</h3>
-			<p>You got access to jeopardy and True or False Games</p>
+			<p>Games</p>
 			<button type="button" id="btn_jeopardy">Jeopardy</button><br>
 			<button type="button" id="btn_ToF">ToF</button><br>
 			<button type="button" id="btn_back_main">Back</button><br>
 		</div>
 		<div id="div_jeopardy">
+			<div id="jeopardy_start">
+				<h3>Info On Jeopardy</h3>
+				<p>In this Jeopardy-inspired game,
+					two teams compete across four challenging categories: Science, Math, History, and Engineering.
+					Each category is filled with a variety of questions, ranging from basic concepts to advanced theories,
+					designed to test the knowledge and abilities. Points are awarded for each correct answer,
+					escalating in value with the difficulty of the questions.
+					The team that accumulates the most points through their accurate responses emerges victorious.</p>
+				<button type="button" id="btn_next_jeopardy">Play Game!</button>
+			</div>
+			<div id="jeopardy_game">
+				<table id="Jeopardy_table">
+				  <tr>
+					<td><img src="100points.jpg" alt="100 Points Science" id="science_100"></td>
+					<td><img src="100points.jpg" alt="100 Points Math" id="math_100"></td>
+					<td><img src="100points.jpg" alt="100 Points history" id="history_100"></td>
+					<td><img src="100points.jpg" alt="100 Points Engineering" id="engineering_100"></td>
+				  </tr>
+				  <tr>
+					<td><img src="200points.jpg" alt="200 Points Science" id="science_200"></td>
+					<td><img src="200points.jpg" alt="200 Points Math" id="math_200"></td>
+					<td><img src="200points.jpg" alt="200 Points history" id="history_200"></td>
+					<td><img src="200points.jpg" alt="200 Points Engineering" id="engineering_200"></td>
+				  </tr>
+				  <tr>
+					<td><img src="300points.jpg" alt="300 Points Science" id="science_300"></td>
+					<td><img src="300points.jpg" alt="300 Points Math" id="math_300"></td>
+					<td><img src="300points.jpg" alt="300 Points history" id="history_300"></td>
+					<td><img src="300points.jpg" alt="300 Points Engineering" id="engineering_300"></td>
+				  </tr>
+				  <tr>
+					<td><img src="500points.jpg" alt="500 Points Science" id="science_500"></td>
+					<td><img src="500points.jpg" alt="500 Points Math" id="math_500"></td>
+					<td><img src="500points.jpg" alt="500 Points history" id="history_500"></td>
+					<td><img src="500points.jpg" alt="500 Points engineering" id="engineering_500"></td>
+				  </tr>
+				</table>
+			
+			</div>
+			<div id="jeopardy_question">
+				<p id="lbl_question"></p>
+				<button type="button" id="btnshowanswer">Answer</button>
+			</div>
+			<div id="jeopardy_answer">
+				<p id="lbl_jeo_ans"></p>
+				<select id="jeo_team">
+					<option value></option>
+					<option value>Team 1</option>
+					<option value>Team 2</option>
+				</select>
+				<button type="button" id="btnnextjeo">Next</button>
+			</div>
+			<button type="button" id="btn_back2">Back</button>
 		</div>
-		<div id="div_tof">                                            
+		<div id="div_tof">                                          
 			<div id="tof_start">
 				<h3>True or False Info</h3>
+				<p>In this True or False science game, players are challenged with a series of 10 questions,
+			ranging from easy to hard, designed to test their scientific knowledge.
+			The difficulty of the questions escalates as the game progresses.
+			The objective is simple: answer correctly to accumulate the highest possible score. 
+			This game not only promises a fun and interactive learning experience but also serves 
+			as a way to enhance understanding of the vast world of science.</p>
 				<button type="button" id="btn_next_tof">Play Game!</button>
 			</div>
 			<div id="tof_game">
-				<h3>TOF game</h3>
+				<h3>TOF game</h3>
 				<p id="tof_question">Hint</p>
 				<select id="tof_box">
 					<option value></option>
