--- a/Calculator.html
+++ b/Calculator.html
@@ -2,30 +2,39 @@
 	<head>
 		<title>Calculator</title>
 		<script src="Calculator.js"></script>
+		<link rel="stylesheet" type="text/css" href="calculator.css" media="screen"></link>
 	</head>
 	<body>
-		<input type="text" id="calculation" disabled>
-		<button type="button" id="btn_calc_clear">C</button>
-		<button type="button" id="btn_CE">CE</button><br>
-		<button type="button" id="btnseven">7</button>
-		<button type="button" id="btneigth">8</button>
-		<button type="button" id="btnnine">9</button>
-		<button type="button" id="btndivision">/</button><br>
-		<button type="button" id="btnfour">4</button>
-		<button type="button" id="btnfive">5</button>
-		<button type="button" id="btnsix">6</button>
-		<button type="button" id="btnmultiplication">x</button><br>
-		<button type="button" id="btnone">1</button>
-		<button type="button" id="btntwo">2</button>
-		<button type="button" id="btnthree">3</button>
-		<button type="button" id="btnminus">-</button><br>
-		<button type="button" id="btn+-">+/-</button>
-		<button type="button" id="btnzero">0</button>
-		<button type="button" id="btndot">.</button>
-		<button type="button" id="btnplus">+</button><br>
-		<button type="button" id="btnabs">|x|</button>
-		<button type="button" id="btn_pi">PI</button>
-		<button type="button" id="btnequal">=</button><br>
-		<button type="button" id="btn_back_calc">Back</button>
+		<div id="div_main">
+			<input type="text" id="calculation" disabled><br>
+			<button type="button" id="btn_sqrt">√</button>
+			<button type="button" id="btn_pi">PI</button>
+			<button type="button" id="btn_e">e</button>
+			<button type="button" id="btn_calc_clear">C</button>
+			<button type="button" id="btn_CE">CE</button><br>
+			<button type="button" id="btn_sin">Sin</button>
+			<button type="button" id="btnseven">7</button>
+			<button type="button" id="btneigth">8</button>
+			<button type="button" id="btnnine">9</button>
+			<button type="button" id="btndivision">/</button><br>
+			<button type="button" id="btn_cos">Cos</button>
+			<button type="button" id="btnfour">4</button>
+			<button type="button" id="btnfive">5</button>
+			<button type="button" id="btnsix">6</button>
+			<button type="button" id="btnmultiplication">x</button><br>
+			<button type="button" id="btn_log">Log</button>
+			<button type="button" id="btnone">1</button>
+			<button type="button" id="btntwo">2</button>
+			<button type="button" id="btnthree">3</button>
+			<button type="button" id="btnminus">-</button><br>
+			<button type="button" id="btnabs">|x|</button>
+			<button type="button" id="btn+-">+/-</button>
+			<button type="button" id="btnzero">0</button>
+			<button type="button" id="btndot">.</button>
+			<button type="button" id="btnplus">+</button><br>
+			<button type="button" id="btn_ln">Ln</button>
+			<button type="button" id="btnequal">=</button><br>
+			<button type="button" id="btn_back_calc">Back</button>
+		</div>
 	</body>
 </html>
