--- a/Game.html
+++ b/Game.html
@@ -14,8 +14,8 @@
 		</div>
 		<div id="div_jeopardy">
 			<div id="jeopardy_start">
-				<h3>Info On Jeopardy</h3>
-				<p>In this Jeopardy-inspired game,
+				<h3 id="txt_info_h">Info On Jeopardy</h3>
+				<p id="txt_info">In this Jeopardy-inspired game,
 					two teams compete across four challenging categories: Science, Math, History, and Engineering.
 					Each category is filled with a variety of questions, ranging from basic concepts to advanced theories,
 					designed to test the knowledge and abilities. Points are awarded for each correct answer,
@@ -69,8 +69,8 @@
 		</div>
 		<div id="div_tof">                                          
 			<div id="tof_start">
-				<h3>True or False Info</h3>
-				<p>In this True or False science game, players are challenged with a series of 10 questions,
+				<h3 id="txt_info_h">True or False Info</h3>
+				<p id="txt_info">In this True or False science game, players are challenged with a series of 10 questions,
 			ranging from easy to hard, designed to test their scientific knowledge.
 			The difficulty of the questions escalates as the game progresses.
 			The objective is simple: answer correctly to accumulate the highest possible score. 
