--- a/Health.html
+++ b/Health.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Health Program</title>
 		<script src="Health.js"></script>
+		<link rel="stylesheet" type="text/css" href="health.css" media="screen"></link>
 	</head>
 	<body>
 		<div id="main_div">
@@ -14,7 +15,13 @@
 		
 		<div id="bmi_info_div">
 			<h3>BMI Info</h3><br>
-			<p>BMI Info: Needs to be continued</p><br>
+			<p>Body Mass Index (BMI) is a widely used measure to estimate a healthy body weight
+			based on an individual's height. Calculated by dividing a person's weight in kilograms
+			by their height in meters squared, BMI categorizes weight into various ranges such as underweight,
+			normal weight, overweight, and obese. While it provides a quick, easy-to-use method for assessing
+			weight-related health risks, BMI does not differentiate between muscle and fat mass, and may not accurately
+			reflect the health status of those with high muscle mass or certain ethnicities. Therefore, it should be
+			considered as one of many tools in assessing health.</p><br>
 			<button type="button" id="btn_next_bmi_info">Next</button><br>
 			<button type="button" id="btn_back_bmi_info">Back</button>
 		</div>
@@ -34,14 +41,35 @@
 		</div>
 		
 		<div id="health_prodivers_info">
-			<h3>Health Insurance</h3><br>
-			<p>All the info with hyperlinks will be here</p>
+			<h1>Health Insurance</h1><br>
+			<h3>Fidelis Care</h3>
+			<p>Fidelis Care offers a range of affordable health insurance plans,
+			including the Fidelis Care Silver plan. This plan is noted for being one of the cheapest in New York,
+			providing a cost-effective option for those seeking coverage.
+			Fidelis Care's plans are known for their affordability,
+			making them a popular choice among New Yorkers who are looking for budget-friendly healthcare options.</p>
+			<h3>Independent Health</h3>
+			<p>Another cost-effective option in New York is Independent Health.
+			They offer competitive rates for their health insurance plans, including the Silver plan.
+			Independent Health is recognized for providing affordable health insurance options,
+			catering to a wide range of needs and budgets.
+			Their plans are designed to offer both affordability and quality coverage.</p>
+			<h3>BlueCross BlueShield</h3>
+			<p>BlueCross is another major provider offering health insurance plans in New York.
+			They offer a range of plans, including the Highmark BCBS Silver plan.
+			BlueCross is known for its comprehensive coverage and is a good option
+			for those looking for a balance between cost and extensive healthcare benefits.</p><br>
 			<button type="button" id="btn_back_health_info">back</button>
 		</div>
 		
 		<div id="water_calculator_info">
 			<h3>Water Calculator Information</h3><br>
-			<p>A water intake calculator can calculate how much water a person should drink based on their weight. </p><br>
+			<p>A Water Intake Calculator helps determine how much water you should drink each day.
+			It usually considers your weight, how active you are, and the climate you live in. For example,
+			a simple guideline is to drink half your body weight in ounces of water daily. So, if you weigh 150 pounds,
+			aim for 75 ounces of water. This amount can change if you're very active or in a hot environment. Drinking enough
+			water is essential for good health, as it helps with body temperature, joint health, and preventing infections.
+			However, everyone's needs are different, and factors like exercise and weather can affect how much water you need.</p><br>
 			<button type="button" id="btn_water_calc_info_next">Next</button><br>
 			<button type="button" id="btn_water_calc_info_back">Back</button>
 		</div>
