--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 	<head>
 		<title>Main Page</title>
 		<script src="index.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css" media="screen"></link>
 	</head>
 	<body>
+		<div id="div_main">
 		<h2>Main Page</h3>
-		<button type="button" id="btn_games">Games</button>
-		<button type="button" id="btn_engine">Engine</button>
-		<button type="button" id="btn_health">Health</button>
-		<button type="button" id="btn_calculator">Calculator</button>
+			<button type="button" id="btn_games">Games</button>
+			<button type="button" id="btn_engine">Engine</button>
+			<button type="button" id="btn_health">Health</button>
+			<button type="button" id="btn_calculator">Calculator</button>
+		</div>
 	</body>
 </html>
