--- a/Engine.html
+++ b/Engine.html
@@ -6,108 +6,108 @@
 	</head>
 	<body>
 		<div id="div_main">
-			<h1>Carreer Fields</h1><br>
-			<h3>Healthcare</h3>
+			<h1 id="category">Carreer Fields</h1><br>
+			<h3 id="major_name">Healthcare</h3>
 			<button type="button" id="btn_healthcare">here</button><br>
-			<h3>Engineering</h3>
+			<h3 id="major_name">Engineering</h3>
 			<button type="button" id="btn_engineering">here</button><br>
-			<h3>Bussiness</h3>
+			<h3 id="major_name">Bussiness</h3>
 			<button type="button" id="btn_business">here</button><br>
-			<h3>Social Services</h3>
+			<h3 id="major_name">Social Services</h3>
 			<button type="button" id="btn_social_services">here</button><br>
-			<h3>Education</h3>
+			<h3 id="major_name">Education</h3>
 			<button type="button" id="btn_education">here</button><br>
-			<h3>Search</h3>
-			<button type="button" id="btn_search_div">Search</button><br>
+			<h3 id="major_name">Search</h3>
+			<button type="button" id="btn_search_div">Search</button><br><br>
 			<button type="button" id="btn_back_main">back</button>
 			</div>
 		<div id="search_div">
-			<h3>Search</h3>
-			<p>Type something to search it</p><br>
+			<h3 id="category">Search</h3>
+			<p id="major_name">Type something to search it</p><br>
 			<input type="text" id="txt_search"></input>
 			<button type="button" id="btn_search">Search</button><br>
 			<button type="button" id="btn_back5">Back</button>
 		
 		</div>
 		<div id="div_healthcare">
-			<h2>Healthcare</h2>
-			<h3>Nursing</h3>
-			<p>Nursing is a major that prepares students to assist doctors in diagnosing,
+			<h2 id="category">Healthcare</h2>
+			<h3 id="major_name">Nursing</h3>
+			<p id="major_info">Nursing is a major that prepares students to assist doctors in diagnosing,
 			treating, and healing patients. It covers a wide range of healthcare skills,
 			from patient care to medical procedures.
 			Nursing graduates are in high demand in hospitals,
 			clinics, and various healthcare settings. The field promises a stable
 			career with a good salary and is expected to see significant job growth.</p>
-			<h3>Dental Support Services</h3>
-			<p>This major focuses on training students to assist dentists in dental work and oral surgery.
+			<h3 id="major_name">Dental Support Services</h3>
+			<p id="major_info">This major focuses on training students to assist dentists in dental work and oral surgery.
 			It's ideal for those interested in the dental aspect of healthcare.
 			Graduates can expect to find opportunities in dental offices and clinics.
 			The major combines practical skills with knowledge of dental health and hygiene.</p>
-			<h3>Pharmacy/Pharmaceutical Sciences</h3>
-			<p>This major prepares students for a career as pharmacists.
+			<h3 id="major_name">Pharmacy/Pharmaceutical Sciences</h3>
+			<p id="major_info">This major prepares students for a career as pharmacists.
 			It involves the study of medication development, dispensing,
 			and the therapeutic use of drugs. Graduates often work in pharmacies,
 			hospitals, or research facilities.</p>
 			<button type="button" id="btn_back">Back</button>
 		</div>
 		<div id="div_engineering">
-			<h2>Engineering</h2>
-			<h3>Mechanical Engineering</h3>
-			<p>This major focuses on building and operating mechanical systems and manufacturing equipment.
+			<h2 id="category">Engineering</h2>
+			<h3 id="major_name">Mechanical Engineering</h3>
+			<p id="major_info">This major focuses on building and operating mechanical systems and manufacturing equipment.
 			Graduates often find opportunities in industries like automotive, aerospace,
 			and manufacturing. Mechanical engineers are involved in designing, analyzing,
 			and manufacturing new products and systems.</p>
-			<h3>Electrical Engineering</h3>
-			<p>Electrical engineers specialize in electrical systems and their components,
+			<h3 id="major_name">Electrical Engineering</h3>
+			<p id="major_info">Electrical engineers specialize in electrical systems and their components,
 			such as circuit boards, motors, and navigation systems.
 			This field offers careers in various sectors, including telecommunications,
 			energy, and consumer electronics.</p>
-			<h3>Civil Engineering</h3>
-			<p>Civil engineering majors learn to design and construct essential infrastructure like bridges,
+			<h3 id="major_name">Civil Engineering</h3>
+			<p id="major_info">Civil engineering majors learn to design and construct essential infrastructure like bridges,
 			roads, and buildings. This field is crucial for urban development and environmental projects,
 			and civil engineers play a key role in planning and overseeing construction projects.</p><br>
 			<button type="button" id="btn_back1">Back</button>
 		</div>
 		<div id="div_business">
-			<h2>Business</h2>
-			<h3>Accounting</h3>
-			<p>This major prepares students for managing financial records and ensures compliance with laws.
+			<h2 id="category">Business</h2>
+			<h3 id="major_name">Accounting</h3>
+			<p id="major_info">This major prepares students for managing financial records and ensures compliance with laws.
 			Accountants play a crucial role in the financial health of organizations,
 			with opportunities in various sectors.</p>
-			<h3>Business Administration</h3>
-			<p>Focused on managing business operations, this major covers areas like marketing, human resources,
+			<h3 id="major_name">Business Administration</h3>
+			<p id="major_info">Focused on managing business operations, this major covers areas like marketing, human resources,
 			and strategic management. Graduates often pursue roles in corporate management,
 			consulting, or entrepreneurship.</p>
-			<h3>Finance</h3>
-			<p>Specializing in financial planning, investment, and management,
+			<h3 id="major_name">Finance</h3>
+			<p id="major_info">Specializing in financial planning, investment, and management,
 			this major is ideal for careers in banking, investment analysis, and financial advising.
 			It provides a strong foundation for understanding market dynamics and financial decision-making.</p><br>
 			<button type="button" id="btn_back2">Back</button>
 		</div>
 		<div id="div_social">
-			<h2>Social Services</h2>
-			<h3>Community Organization and Advocacy</h3>
-			<p>This major focuses on strategies to challenge and change community social systems,
+			<h2 id="category">Social Services</h2>
+			<h3 id="major_name">Community Organization and Advocacy</h3>
+			<p id="major_info">This major focuses on strategies to challenge and change community social systems,
 			aiming to enrich residents' lives. It prepares students for roles in
 			community development and social change.</p>
-			<h3>Public Administration</h3>
-			<p>Students learn to run the executive arm of local, state, and federal governments.
+			<h3 id="major_name">Public Administration</h3>
+			<p id="major_info">Students learn to run the executive arm of local, state, and federal governments.
 			The major focuses on policy creation to bring about positive change.</p>
-			<h3>Social Work</h3>
-			<p>This major is designed to prepare students for implementing programs to improve the
+			<h3 id="major_name">Social Work</h3>
+			<p id="major_info">This major is designed to prepare students for implementing programs to improve the
 			quality of life for various vulnerable populations, including families and children.</p>
 			<button type="button" id="btn_back3">Back</button>
 		</div>
 		<div id="div_education">
-			<h2>Education</h2>
-			<h3>Early Childhood Education</h3>
-			<p>This major focuses on the development and education of young children.
+			<h2 id="category">Education</h2>
+			<h3 id="major_name">Early Childhood Education</h3>
+			<p id="major_info">This major focuses on the development and education of young children.
 			Graduates often become teachers in preschools and early education settings.</p>
-			<h3>Health Education</h3>
-			<p>This major prepares students to teach health education in schools and communities,
+			<h3 id="major_name">Health Education</h3>
+			<p id="major_info">This major prepares students to teach health education in schools and communities,
 			focusing on promoting wellness and healthy lifestyles.</p>
-			<h3>Special Education</h3>
-			<p>Specializing in educating students with special needs,
+			<h3 id="major_name">Special Education</h3>
+			<p id="major_info">Specializing in educating students with special needs,
 			this major trains students to address various learning disabilities and challenges.</p>
 			<button type="button" id="btn_back4">Back</button>
 		</div>
