--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="div_main">
-		<h2>Main Page</h3>
+		<h2 id="title">Main Page</h3>
 			<button type="button" id="btn_games">Games</button>
 			<button type="button" id="btn_engine">Engine</button>
 			<button type="button" id="btn_health">Health</button>
