--- a/Game.html
+++ b/Game.html
@@ -6,8 +6,7 @@
 	</head>
 	<body>
 		<div id="div_main">
-			<h3>Here are the games</h3>
-			<p>Games</p>
+			<h3 id="title">Games</h3>
 			<button type="button" id="btn_jeopardy">Jeopardy</button><br>
 			<button type="button" id="btn_ToF">ToF</button><br>
 			<button type="button" id="btn_back_main">Back</button><br>
@@ -79,7 +78,7 @@
 				<button type="button" id="btn_next_tof">Play Game!</button>
 			</div>
 			<div id="tof_game">
-				<h3>TOF game</h3>
+				<h3 id="title">TOF game</h3>
 				<p id="tof_question">Hint</p>
 				<select id="tof_box">
 					<option value></option>
